--- a/app/templates/base.pug
+++ b/app/templates/base.pug
@@ -13,7 +13,10 @@ html(lang="ru")
     block mainmenu
       div
         a(href="{{ url_for('index') }}") Home 
-        a(href="{{ url_for('login') }}") Login
+        if current_user.is_anonymous
+          a(href="{{ url_for('login') }}") Login
+        else 
+          a(href="{{ url_for('logout') }}") Logout
       hr
         with messages = get_flashed_messages
         if messages
