--- a/app/templates/auth/reset_password.pug
+++ b/app/templates/auth/reset_password.pug
@@ -1,12 +1,6 @@
-!!! 5 doctype html
-html 
-  body 
-    p Dear {{ user.username }},
-    p 
-      |To reset your password 
-      a(href="{{ url_for('reset_password', token=token. _external=true) }}") click here
-    p Alternatively, you can paste the following link in your browser's address bar:
-    p {{ url_for('reset_password', token=token, _external=True) }}
-    p If you have not requested a password reset simply ignore this message.
-    p Sincerely,
-    p The Site-Flask Team
+extends base.html
+{% import "bootstrap_wtf.pug" as wtf %}
+
+block content
+  h1 {{ _('Reset Your Password') }}
+  {{ wtf.quick_form(form) }}
