--- a/app/templates/auth/reset_password_request.pug
+++ b/app/templates/auth/reset_password_request.pug
@@ -1,14 +1,16 @@
 extends base.pug
+{% import "bootstrap_wtf.html" as wtf %}
 
 block content 
   h1 {{ _('Reset Password') }}
-  form(action="" method="post")
-    {{ form.hidden_tag() }}
-    p 
-      {{ form.email.label }}
-      {{ form.email(size=64) }}
-      for error in form.email.errors
-        span(style="color: red;")
-          [{{ error }}]
-    p 
-      {{ form.submit() }}
+  {{ wtf.quick_form(form) }}
+  //- form(action="" method="post")
+  //-   {{ form.hidden_tag() }}
+  //-   p 
+  //-     {{ form.email.label }}
+  //-     {{ form.email(size=64) }}
+  //-     for error in form.email.errors
+  //-       span(style="color: red;")
+  //-         [{{ error }}]
+  //-   p 
+  //-     {{ form.submit() }}
