--- a/app/templates/_post.pug
+++ b/app/templates/_post.pug
@@ -1,13 +1,21 @@
 table.table.table-hover
   tr(valign="top") 
     td(width="70px")
-      a(href="{{ url_for('main.user', username=post.author.username)}}")
-        img(src="{{ post.author.avatar(70) }}")
+      a(href= url_for('main.user', username=post.author.username))
+        img(src="{{ post.author.avatar(70) }}") 
     td 
-      a.user_popup(href="{{ url_for('main.user', username=post.author.username)}}")
-          {{ post.author.username }}
-      //- set user_link
-      //-   a.user_popup(href="{{ url_for('user', username=post.author.username)}}")
-      //-     {{ post.author.username }} 
-      {{ _('%(username)s said %(when)s', username=user_link, when=moment(post.timestamp).fromNow()) }}: 
-      {{ post.body }}
+      -set user_link
+        a.user_popup(href= url_for('main.user', username=post.author.username))
+          = post.author.username
+      -endset
+      {{ _('%(username)s said %(when)s', username=user_link, when=moment(post.timestamp).fromNow()) }}
+      |: 
+      br
+      span(id="post= post.id ") 
+        = post.body
+      if post.language and post.language != g.locale 
+        br
+        span(id="translation= post.id ")
+          a(href="javascript:translate('post= post.id ', 'translation{{ post.id }}', '{{ post.language }}', '{{ g.locale }}');") 
+            = _('Translate') 
+
