--- a/app/templates/auth/register.pug
+++ b/app/templates/auth/register.pug
@@ -1,5 +1,5 @@
 extends base.pug
-import bootstrap_wtf.pug as wtf
+{% import 'bootstrap_wtf.html' as wtf %}
 block content 
   h1 {{ _('Register') }} 
   {{ wtf.quick_form(form) }}
