--- a/app/templates/base.pug
+++ b/app/templates/base.pug
@@ -3,25 +3,42 @@ html(lang="ru")
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(type='text/css' rel='stylesheet' href="{{ url_for('static', filename='css/style.css')}}")
+    //- link(type='text/css' rel='stylesheet' href="app/static/bootstrap/css/bootstrap.min.css'")
+    link(type='text/css' rel='stylesheet' href="{{ url_for('static', filename='sass/style.css')}}")
     block title
       if title
-        title site Flask - {{ title }}
+        title site Flask - 
+          = title
       else
-        title site Flask
+        title 
+          = _('Welcome to site Flask')
   body
-    block mainmenu
-      div
-        a(href="{{ url_for('index') }}") Home 
-        if current_user.is_anonymous
-          a(href="{{ url_for('login') }}") Login
-        else 
-          a(href="{{ url_for('logout') }}") Logout
-      hr
+    include header.pug
+    hr
+      .container.mt-3
         with messages = get_flashed_messages
         if messages
           ul
             for message in messages
-              li 
-                {{ message }}
+              li.alert.alert-info(role="alert") 
+                = message
     block content
+    script(src="{{ url_for('static', filename='js/main.js') }}")
+    = moment.include_moment() 
+    = moment.lang(g.locale)
+    script
+      async function translate(sourceElem, destElem, sourceLang, destLang) {
+        document.getElementById(destElem).innerHTML = 
+          '<img src="{{ url_for('static', filename='loading.gif') }}">';
+        const response = await fetch('/translate', {
+          method: 'POST',
+          headers: {'Content-Type': 'application/json; charset=utf-8'},
+          body: JSON.stringify({
+            text: document.getElementById(sourceElem).innerText,
+            source_language: sourceLang,
+            dest_language: destLang
+          })
+        })
+        const data = await response.json();
+        document.getElementById(destElem).innerText = data.text;
+      }
